[package]

name = "hyper"
version = "0.1.1"
description = "A modern HTTP library."
readme = "README.md"
documentation = "http://hyperium.github.io/hyper/hyper/index.html"
repository = "https://github.com/hyperium/hyper"
license = "MIT"
authors = ["Sean McArthur <sean.monstar@gmail.com>",
           "Jonathan Reem <jonathan.reem@gmail.com>"]

[dependencies.cookie]
git = "https://github.com/servo/cookie-rs"
branch = "lenientparse_backport"

[dependencies]
log = "*"
mime = "*"
mucell = "*"
openssl = "*"
rustc-serialize = "*"
time = "*"
unicase = "*"
unsafe-any = "*"
url = "*"
